solo-projects/bburnley/piscene/exam_final/ft_list_size/3-0-ft_list_size.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z3r1p3.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Nov 18 16:55:39 PST 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/c++/4.2.1
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/piscine-c-exam-final/exam_20161118/bburnley

= Git history ==================================================================
$> git -C /var/folders/76/wrysnvgs5jq6j6_hk2_41rw40000gp/T/tmpspmLVS/user log --pretty='%H - %an, %ad : %s'
5fac10ac2e99b69b6dcd52c419a2501e759ca9ac - Exam 42, Fri Nov 18 16:54:32 2016 -0800 : ft_list_size: made cute changes to source file; I actually think this might work despite being unable to test
22c8bacf1723a06441f3d0607b84173b71d93cd5 - Exam 42, Fri Nov 18 16:50:08 2016 -0800 : first_list_size: add first drafts of source and header files; can't seem to test due to poor memory as to how we set up the terminal NULL in the list chain; might have to grademe just to see later problems
fc6459b2fb5ba88fd8ea40495b44ed9358409f6a - Exam 42, Fri Nov 18 16:14:40 2016 -0800 : ft_atoi: one last cosmetic change as I read over it; praying now hard
0f9b5bbd365c552f74fa4f87499ed12526d9c765 - Exam 42, Fri Nov 18 16:00:56 2016 -0800 : ft_atoi: remove testing support from atoi, fingers crossed
c7b0c66ea0024539ee40b2d481a92199b6f4e243 - Exam 42, Fri Nov 18 15:56:41 2016 -0800 : ft_atoi: First draft. Been slowly working this one over. Think I have all expected behavior.
d9799cfe9d4d40c14e314024fe6d851e903f1f71 - Exam 42, Fri Nov 18 11:11:29 2016 -0800 : first_word: ready to be graded; still minor concerns about handling of tabs though (man ascii's chart is very cryptic)
e7969051a1d30c74cd880baf6242e771d4c65f11 - Exam 42, Fri Nov 18 10:49:50 2016 -0800 : first_word: first draft, passing provided tests
526c438dec03760bbebd8d84290d69bf99d37c25 - Exam 42, Fri Nov 18 10:23:27 2016 -0800 : aff_first_param: tidying up, all provided tests pass
9943dffe2040292784d198a104901f4c2436a657 - Exam 42, Fri Nov 18 10:18:52 2016 -0800 : aff_first_param: first draft
 
= Collected files ==========================================
$> ls -lAR /var/folders/76/wrysnvgs5jq6j6_hk2_41rw40000gp/T/tmpspmLVS/user
total 8
-rw-r--r--  1 deepthought  deepthought  2910 Nov 18 16:55 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Nov 18 16:55 aff_first_param
drwxr-xr-x  3 deepthought  deepthought   102 Nov 18 16:55 first_word
drwxr-xr-x  3 deepthought  deepthought   102 Nov 18 16:55 ft_atoi
drwxr-xr-x  4 deepthought  deepthought   136 Nov 18 16:55 ft_list_size

/var/folders/76/wrysnvgs5jq6j6_hk2_41rw40000gp/T/tmpspmLVS/user/aff_first_param:
total 8
-rw-r--r--  1 deepthought  deepthought  1224 Nov 18 16:55 aff_first_param.c

/var/folders/76/wrysnvgs5jq6j6_hk2_41rw40000gp/T/tmpspmLVS/user/first_word:
total 8
-rw-r--r--  1 deepthought  deepthought  1446 Nov 18 16:55 first_word.c

/var/folders/76/wrysnvgs5jq6j6_hk2_41rw40000gp/T/tmpspmLVS/user/ft_atoi:
total 8
-rw-r--r--  1 deepthought  deepthought  2283 Nov 18 16:55 ft_atoi.c

/var/folders/76/wrysnvgs5jq6j6_hk2_41rw40000gp/T/tmpspmLVS/user/ft_list_size:
total 16
-rw-r--r--  1 deepthought  deepthought  1012 Nov 18 16:55 ft_list.h
-rw-r--r--  1 deepthought  deepthought  1087 Nov 18 16:55 ft_list_size.c
 
= ft_list_size =================================================================
$> gcc -Wextra -Wall -Werror ft_list_size.c main.c -o user_exe 
ft_list_size.c:20:26: error: use of undeclared identifier 'NULL'
        if (begin_list->next != NULL)
                                ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
